Addes simple tests

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -45,24 +45,17 @@ image: /site_images/CBW_Epigenome-data_icon.jpg
 <a name="scripts"></a>
 ## 5. Shell Scripts
 
+Testing quiz answer elision:
 
-<!-- <details>
-  <summary>
-**Optional connection option** (click here)
-  </summary>
+<details>
+<summary>
+Question here
+</summary>
 
-Using `ssh` command to connect to the Calcul Quebec Secure Cloud.
-
-```{bash}
-ssh user01@login1.cbw-oct-2020.calculquebec.cloud
-
-```
-
-You will be in your home folder. At this step, before continuing, request an interactive compute node for the workshop using the following command:
+Answer here:
 
 ```{bash}
 salloc -N 1 -n 2  --mem 7000
-
 ```
-</details> -->
+</details>
 
