Switch image to cloud image

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -3,9 +3,8 @@ layout: tutorial_page
 permalink: /aws_2021
 title: AWS
 header1: Workshop Pages for Students
-header2: AWS and unix intro
-image: /site_images/CBW_Epigenome-data_icon.jpg
-
+header2: AWS and Unix intro
+image: /site_images/CBW_bigdata_icon.jpg
 ---
 
 -----------------------
