Add dates and title to frontmatter

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -1,10 +1,12 @@
 ---
 layout: tutorial_page
 permalink: /aws_2021
-title: AWS
+title: AWS 2021
 header1: Workshop Pages for Students
 header2: AWS and Unix intro
 image: /site_images/CBW_bigdata_icon.jpg
+startDate: 2021-06-03
+endDate: 2021-06-03
 ---
 
 -----------------------
