Added a few exercises for modules 2 and 3

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -65,60 +65,35 @@ This section will show students how to login to AWS and create an instance.
 This section will show students the basics of the command line, with a focus on navigation.
 
 <a name="commands"></a>
-### 2.1 How commands work
+### Exercise: Exploring the filesystem
 
-What do all the options in the command mean?
+1. Connect to your AWS instance
+2. Type the `ls` command, what do you see? 
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
+```
+$ ls 
+CourseData  R  cvmfs_cache  workspace
+```
+
+The `ls` command lists the contents of a working directory. 
 
 </details>
 
----
-<a name="navigation"></a>
-### 2.2 Basic navigation
-
-
-What do all the options in the command mean?
+3. After following the tutorial, can you answer what these commands (`cd`, `pwd`) do?  
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
+The `cd` command is used to *change directories*. Without arguments, it will move to the home directory (`~`)
 
-</details>
-
----
-
-<a name="std_in_out"></a>
-### 2.3 Standard In /Standard Out
-
-
-What do all the options in the command mean?
-
-<details>
-  <summary>
-**Solution** (click here)
-  </summary>
-
-
-</details>
-
----
-
-<a name="help"></a>
-### 2.4 Asking for help
-
-What do all the options in the command mean?
-
-<details>
-  <summary>
-**Solution** (click here)
-  </summary>
+The `pwd` command shows the absolute *path to the working directory*. 
 
 
 </details>
@@ -132,68 +107,103 @@ What do all the options in the command mean?
 This section will show students how to manipulate files, including reading, editing, and renaming text files.
 
 <a name="filetypes"></a>
-### 3.1 Types of files
+### Exercise: Reading text files
 
-What do all the options in the command mean?
+1. What do the commands `cat`, `head`, and `tail` do? What do they have in common? 
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
+All three of these commands ouptut the contents of a text file to *standard out*: 
+- `cat` outputs the *full* contents of the file
+- `head` outputs the *first* 10 lines of a file
+- `tail` outputs the *last* 10 lines of a file
+
+</details>
+
+2. What does the command `less` do? How is it different from `cat`? 
+
+<details>
+  <summary>
+**Solution** (click here)
+  </summary>
+
+`less` opens a text file for viewing. Unlike `cat`, it will display it in a separate file viewer. 
+
+</details>
+
+
+3. How can you know the number of lines in a file? 
+
+<details>
+  <summary>
+**Solution** (click here)
+  </summary>
+
+The command `wc -l` will display the number of lines in a file. 
+
+`wc` (word count) displays the number of words, lines, and bytes in a file. The `-l` option, limits the output to lines. 
 
 </details>
 
 ---
 <a name="read_files"></a>
-### 3.2 Reading text files
+### Exercise: Editing text files
 
-
-What do all the options in the command mean?
-
-<details>
-  <summary>
-**Solution** (click here)
-  </summary>
-
-
-</details>
-
----
-
-<a name="file_edit"></a>
-### 3.3 Editing files
-
-
-What do all the options in the command mean?
+1. Write "Hello world" into a file called `helloworld.txt` using `nano`. Save and then exit. 
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
+First, use the `nano` command to open a file called `helloworld.txt`
+
+```
+$ nano helloworld.txt
+```
+
+Inside the nano editor, write "Hello world" and then use the `^O` option to write the changes and then `^X` to exit. 
 
 </details>
 
----
 
-<a name="cp_mv"></a>
-### 3.4 Copying, renaming, and moving files
-
-What do all the options in the command mean?
+2. Create a subdirectory called `test`. Then, move the `helloworld.txt` file into the directory. 
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
+First, use the command `mkdir` to create this new directory. Then, use `mv` to move `helloworld.txt` into this directory. 
+
+```
+$ mkdir test
+$ mv helloworld.txt test/
+
+```
 
 </details>
 
 
----
-<a name="chmod"></a>
-### 3.5 Introduction to permissions
+3. Create a copy of the `helloworld.txt` file called `helloworld2.txt`, inside the `test` directory. 
+
+<details>
+  <summary>
+**Solution** (click here)
+  </summary>
+
+First, change the working directory using `cd`, then use the `cp` command to create the copy.  
+
+```
+$ cd test
+$ cp helloworld.txt helloworld2.txt
+
+```
+
+</details>
 
 
 -----------------------
