Fix the broken links in the content list

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -24,25 +24,13 @@ endDate: 2021-06-03
 
 2. [Introduction to the command line](#command_line_intro)
 
-    2.1 [How commands work](#commands)
-
-    2.2 [Basic navigation](#navigation)
-
-    2.3 [Standard in /Standard out](#std_in_out)
-
-    2.4 [Asking for help](#help)
+    2.1 [Exercise: Exploring the filesystem](#filesystem_exploration)
 
 3. [File manipulation](#file_manip)
 
-    3.1 [Types of files](#filetypes)
+    3.1 [Exercise: Reading text files](#read_files)
 
-    3.2 [Reading text files](#read_files)
-
-    3.3 [Editing files](#file_edit)
-
-    3.4 [Copying, renaming, and moving files](#cp_mv)
-
-    3.5 [Introduction to permissions](#chmod)
+    3.3 [Exercise: Editing text files](#edit_file)
 
 4. [Searching and sorting files](#search_sort)
 
@@ -64,7 +52,7 @@ This section will show students how to login to AWS and create an instance.
 ### Description of the lab:
 This section will show students the basics of the command line, with a focus on navigation.
 
-<a name="commands"></a>
+<a name="filesystem_exploration"></a>
 ### Exercise: Exploring the filesystem
 
 1. Connect to your AWS instance
@@ -106,7 +94,7 @@ The `pwd` command shows the absolute *path to the working directory*.
 ### Description of the lab:
 This section will show students how to manipulate files, including reading, editing, and renaming text files.
 
-<a name="filetypes"></a>
+<a name="read_files"></a>
 ### Exercise: Reading text files
 
 1. What do the commands `cat`, `head`, and `tail` do? What do they have in common? 
@@ -149,7 +137,7 @@ The command `wc -l` will display the number of lines in a file.
 </details>
 
 ---
-<a name="read_files"></a>
+<a name="edit_files"></a>
 ### Exercise: Editing text files
 
 1. Write "Hello world" into a file called `helloworld.txt` using `nano`. Save and then exit. 
