Adding Zhibin slides

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -44,6 +44,8 @@ endDate: 2021-06-03
 #### Description of the lab:
 This section will show students how to login to AWS and create an instance.
 
+- [Slides (pdf)](data/CBW_2021_AWS.pdf)
+- [Slides (pptx)](data/CBW_2021_AWS.pptx)
 
 -----------------------
 <a name="command_line_intro"></a>
@@ -56,7 +58,7 @@ This section will show students the basics of the command line, with a focus on 
 ### Exercise: Exploring the filesystem
 
 1. Connect to your AWS instance
-2. Type the `ls` command, what do you see? 
+2. Type the `ls` command, what do you see?
 
 <details>
   <summary>
@@ -64,15 +66,15 @@ This section will show students the basics of the command line, with a focus on 
   </summary>
 
 ```
-$ ls 
+$ ls
 CourseData  R  cvmfs_cache  workspace
 ```
 
-The `ls` command lists the contents of a working directory. 
+The `ls` command lists the contents of a working directory.
 
 </details>
 
-3. After following the tutorial, can you answer what these commands (`cd`, `pwd`) do?  
+3. After following the tutorial, can you answer what these commands (`cd`, `pwd`) do?
 
 <details>
   <summary>
@@ -81,7 +83,7 @@ The `ls` command lists the contents of a working directory.
 
 The `cd` command is used to *change directories*. Without arguments, it will move to the home directory (`~`)
 
-The `pwd` command shows the absolute *path to the working directory*. 
+The `pwd` command shows the absolute *path to the working directory*.
 
 
 </details>
@@ -97,42 +99,42 @@ This section will show students how to manipulate files, including reading, edit
 <a name="read_files"></a>
 ### Exercise: Reading text files
 
-1. What do the commands `cat`, `head`, and `tail` do? What do they have in common? 
+1. What do the commands `cat`, `head`, and `tail` do? What do they have in common?
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
-All three of these commands ouptut the contents of a text file to *standard out*: 
+All three of these commands ouptut the contents of a text file to *standard out*:
 - `cat` outputs the *full* contents of the file
 - `head` outputs the *first* 10 lines of a file
 - `tail` outputs the *last* 10 lines of a file
 
 </details>
 
-2. What does the command `less` do? How is it different from `cat`? 
+2. What does the command `less` do? How is it different from `cat`?
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
-`less` opens a text file for viewing. Unlike `cat`, it will display it in a separate file viewer. 
+`less` opens a text file for viewing. Unlike `cat`, it will display it in a separate file viewer.
 
 </details>
 
 
-3. How can you know the number of lines in a file? 
+3. How can you know the number of lines in a file?
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
-The command `wc -l` will display the number of lines in a file. 
+The command `wc -l` will display the number of lines in a file.
 
-`wc` (word count) displays the number of words, lines, and bytes in a file. The `-l` option, limits the output to lines. 
+`wc` (word count) displays the number of words, lines, and bytes in a file. The `-l` option, limits the output to lines.
 
 </details>
 
@@ -140,7 +142,7 @@ The command `wc -l` will display the number of lines in a file.
 <a name="edit_files"></a>
 ### Exercise: Editing text files
 
-1. Write "Hello world" into a file called `helloworld.txt` using `nano`. Save and then exit. 
+1. Write "Hello world" into a file called `helloworld.txt` using `nano`. Save and then exit.
 
 <details>
   <summary>
@@ -153,19 +155,19 @@ First, use the `nano` command to open a file called `helloworld.txt`
 $ nano helloworld.txt
 ```
 
-Inside the nano editor, write "Hello world" and then use the `^O` option to write the changes and then `^X` to exit. 
+Inside the nano editor, write "Hello world" and then use the `^O` option to write the changes and then `^X` to exit.
 
 </details>
 
 
-2. Create a subdirectory called `test`. Then, move the `helloworld.txt` file into the directory. 
+2. Create a subdirectory called `test`. Then, move the `helloworld.txt` file into the directory.
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
-First, use the command `mkdir` to create this new directory. Then, use `mv` to move `helloworld.txt` into this directory. 
+First, use the command `mkdir` to create this new directory. Then, use `mv` to move `helloworld.txt` into this directory.
 
 ```
 $ mkdir test
@@ -176,14 +178,14 @@ $ mv helloworld.txt test/
 </details>
 
 
-3. Create a copy of the `helloworld.txt` file called `helloworld2.txt`, inside the `test` directory. 
+3. Create a copy of the `helloworld.txt` file called `helloworld2.txt`, inside the `test` directory.
 
 <details>
   <summary>
 **Solution** (click here)
   </summary>
 
-First, change the working directory using `cd`, then use the `cp` command to create the copy.  
+First, change the working directory using `cd`, then use the `cp` command to create the copy.
 
 ```
 $ cd test
