--- a/aws_2021.md
+++ b/aws_2021.md
@@ -1,6 +1,6 @@
 ---
 layout: tutorial_page
-permalink: /AWS_2021
+permalink: /aws_2021
 title: AWS 2021
 header1: Workshop Pages for Students
 header2: AWS and Unix intro
