--- a/aws_2021.md
+++ b/aws_2021.md
@@ -44,8 +44,8 @@ endDate: 2021-06-03
 #### Description of the lab:
 This section will show students how to login to AWS and create an instance.
 
-- [Slides (pdf)](data/CBW_2021_AWS.pdf)
-- [Slides (pptx)](data/CBW_2021_AWS.pptx)
+- [Slides (pdf)](https://drive.google.com/file/d/1Vf1uiJPpY8025pJjsWNFvgK-ImqkGmVE/view?usp=sharing)
+- [Slides (pptx)](https://drive.google.com/file/d/1Vf1uiJPpY8025pJjsWNFvgK-ImqkGmVE/view?usp=sharing)
 
 -----------------------
 <a name="command_line_intro"></a>
