--- a/aws_2021.md
+++ b/aws_2021.md
@@ -11,7 +11,7 @@ endDate: 2021-06-03
 
 -----------------------
 
-# Connecting and properly using a clound computing cluster at the CBW
+# Connecting and properly using a cloud computing cluster at the CBW
 
 *by Jose Hector Galvez, Zhibin Lu & Rob Syme*
 
