--- a/aws_2021.md
+++ b/aws_2021.md
@@ -203,7 +203,7 @@ $ cp helloworld.txt helloworld2.txt
 ### Description of the lab:
 This section will show students how to search for files and in files.
 
-![Wget example](img/wget.png)
+Workshop notes and quiz questions [here](/aws_2021_module_4).
 
 -----------------------
 <a name="conclusion"></a>
