--- a/aws_2021.md
+++ b/aws_2021.md
@@ -211,3 +211,5 @@ Workshop notes and quiz questions [here](/aws_2021_module_4).
 
 ### Description of the lab:
 This section will show students how the basic concepts fit together and in the context of bioinformatics.
+
+Workshop notes and quiz questions [here](/aws_2021_module_5).
