Added links to the PPT/PDFs of modules 2 and 3

--- a/aws_2021.md
+++ b/aws_2021.md
@@ -54,6 +54,9 @@ This section will show students how to login to AWS and create an instance.
 ### Description of the lab:
 This section will show students the basics of the command line, with a focus on navigation.
 
+- [Slides (pdf)](https://drive.google.com/file/d/1sA3-wD0xnrGST4QwbXFWZne_DOR6nJOZ/view?usp=sharing)
+- [Slides (pptx)](https://drive.google.com/file/d/1-a3HmZTet2JtP3D0M89c-daEg39-kjqe/view?usp=sharing)
+
 <a name="filesystem_exploration"></a>
 ### Exercise: Exploring the filesystem
 
@@ -62,13 +65,15 @@ This section will show students the basics of the command line, with a focus on 
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
+
 
 ```
 $ ls
 CourseData  R  cvmfs_cache  workspace
 ```
+
 
 The `ls` command lists the contents of a working directory.
 
@@ -78,8 +83,9 @@ The `ls` command lists the contents of a working directory.
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
+
 
 The `cd` command is used to *change directories*. Without arguments, it will move to the home directory (`~`)
 
@@ -96,6 +102,9 @@ The `pwd` command shows the absolute *path to the working directory*.
 ### Description of the lab:
 This section will show students how to manipulate files, including reading, editing, and renaming text files.
 
+- [Slides (pdf)](https://drive.google.com/file/d/1yrOXwEAH2WBlxihrkBFwcwys7RrABfTC/view?usp=sharing)
+- [Slides (pptx)](https://drive.google.com/file/d/1zU8eiSCArp9gMsU8ae4ns5fCOqUcmSW7/view?usp=sharing)
+
 <a name="read_files"></a>
 ### Exercise: Reading text files
 
@@ -103,13 +112,17 @@ This section will show students how to manipulate files, including reading, edit
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
 
+
 All three of these commands ouptut the contents of a text file to *standard out*:
+
+
 - `cat` outputs the *full* contents of the file
 - `head` outputs the *first* 10 lines of a file
 - `tail` outputs the *last* 10 lines of a file
+
 
 </details>
 
@@ -117,7 +130,7 @@ All three of these commands ouptut the contents of a text file to *standard out*
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
 
 `less` opens a text file for viewing. Unlike `cat`, it will display it in a separate file viewer.
@@ -129,7 +142,7 @@ All three of these commands ouptut the contents of a text file to *standard out*
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
 
 The command `wc -l` will display the number of lines in a file.
@@ -146,16 +159,20 @@ The command `wc -l` will display the number of lines in a file.
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
+
 
 First, use the `nano` command to open a file called `helloworld.txt`
 
+
 ```
 $ nano helloworld.txt
+
 ```
 
 Inside the nano editor, write "Hello world" and then use the `^O` option to write the changes and then `^X` to exit.
+
 
 </details>
 
@@ -164,16 +181,19 @@ Inside the nano editor, write "Hello world" and then use the `^O` option to writ
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
 
+
 First, use the command `mkdir` to create this new directory. Then, use `mv` to move `helloworld.txt` into this directory.
+
 
 ```
 $ mkdir test
 $ mv helloworld.txt test/
 
 ```
+
 
 </details>
 
@@ -182,16 +202,19 @@ $ mv helloworld.txt test/
 
 <details>
   <summary>
-**Solution** (click here)
+Solution (click here)
   </summary>
 
+
 First, change the working directory using `cd`, then use the `cp` command to create the copy.
+
 
 ```
 $ cd test
 $ cp helloworld.txt helloworld2.txt
 
 ```
+
 
 </details>
 
