--- a/aws_2021.md
+++ b/aws_2021.md
@@ -36,6 +36,8 @@ endDate: 2021-06-03
 
 5. [Putting it all together](#conclusion)
 
+6.[AWS Machine Image (AMI)](#ami)
+
 -----------------------
 
 <a name="aws_login"></a>
@@ -236,3 +238,15 @@ Workshop notes and quiz questions [here](/aws_2021_module_4).
 This section will show students how the basic concepts fit together and in the context of bioinformatics.
 
 Workshop notes and quiz questions [here](/aws_2021_module_5).
+
+-----------------------
+<a name="ami"></a>
+## 6. AWS Machine Image (AMI)
+
+Starting the AWS AMI after the workshop is over:
+
+An updated AWS Machine Image (AMI) will be be prepred by Zhibin at the end of this CBW workshop: It will have the same software used in the workshop, but it will not contain any of the data. To get such an image started, you will need to set up your own AWS account with your own credit card, and then, the same as you did in this workshop, look for the CBW<new time stamp> AMI, and start that with your own project. 
+    
+[Launching the AMI](https://bioinformatics-ca.github.io/bioinformatics_for_cancer_genomics_AMI_2015/)
+    
+ Let us know on the slack channel or at course_info@bioinformatics.ca if you are experiencing any problems with this.
