--- a/aws_2021.md
+++ b/aws_2021.md
@@ -3,10 +3,9 @@ layout: tutorial_page
 permalink: /aws_2021
 title: AWS 2021
 header1: Workshop Pages for Students
-header2: AWS and Unix intro
+header2: AWS and Unix intro for CAN
 image: /site_images/CBW_bigdata_icon.jpg
-startDate: 2021-06-03
-endDate: 2021-06-03
+home: https://bioinformaticsdotca.github.io/CAN_2021
 ---
 
 -----------------------
