Updated links to latest version of the presentations and added cheat sheet link

--- a/AWS_v2_2021.md
+++ b/AWS_v2_2021.md
@@ -56,8 +56,8 @@ This section will show students how to login to AWS and create an instance.
 ### Description of the lab:
 This section will show students the basics of the command line, with a focus on navigation.
 
-- [Slides (pdf)](https://drive.google.com/file/d/1sA3-wD0xnrGST4QwbXFWZne_DOR6nJOZ/view?usp=sharing)
-- [Slides (pptx)](https://drive.google.com/file/d/1-a3HmZTet2JtP3D0M89c-daEg39-kjqe/view?usp=sharing)
+- [Slides (pdf)](https://drive.google.com/file/d/1gTOzpP_VUjR7vIPidLWABps9jh5mYvA0/view?usp=sharing)
+- [Slides (pptx)](https://docs.google.com/presentation/d/1gBJX2TmG8YpbWWf1-J7IniKfHv_TDIS4/edit?usp=sharing&ouid=114211675675236204132&rtpof=true&sd=true)
 
 <a name="filesystem_exploration"></a>
 ### Exercise: Exploring the filesystem
@@ -104,8 +104,14 @@ The `pwd` command shows the absolute *path to the working directory*.
 ### Description of the lab:
 This section will show students how to manipulate files, including reading, editing, and renaming text files.
 
-- [Slides (pdf)](https://drive.google.com/file/d/1yrOXwEAH2WBlxihrkBFwcwys7RrABfTC/view?usp=sharing)
-- [Slides (pptx)](https://drive.google.com/file/d/1zU8eiSCArp9gMsU8ae4ns5fCOqUcmSW7/view?usp=sharing)
+- [Slides (pdf)](https://drive.google.com/file/d/1gYHurIPaOlmxZMtVXDqjDW8L-jZfFzr6/view?usp=sharing)
+- [Slides (pptx)](https://docs.google.com/presentation/d/1gVEoeMVD_aphZk6jIGZSy4tg4OsvOAdJ/edit?usp=sharing&ouid=114211675675236204132&rtpof=true&sd=true)
+
+
+### Additional material: 
+Here are two cheat-sheets that can be useful to have as a reference for common UNIX/Linux commands: 
+
+- [FOSSwire.com Unix/Linux Command Reference](https://files.fosswire.com/2007/08/fwunixref.pdf)
 
 <a name="read_files"></a>
 ### Exercise: Reading text files
