Updated links to latest version of the presentations and added cheat sheet link

--- a/AWS_v2_2021.md
+++ b/AWS_v2_2021.md
@@ -112,6 +112,7 @@ This section will show students how to manipulate files, including reading, edit
 Here are two cheat-sheets that can be useful to have as a reference for common UNIX/Linux commands: 
 
 - [FOSSwire.com Unix/Linux Command Reference](https://files.fosswire.com/2007/08/fwunixref.pdf)
+- [SUSO.org Unix/Linux Command Syntax and Reference](https://i.redd.it/6s2q64ticje51.png)
 
 <a name="read_files"></a>
 ### Exercise: Reading text files
