--- a/AWS_v2_2021.md
+++ b/AWS_v2_2021.md
@@ -108,8 +108,8 @@ This section will show students how to manipulate files, including reading, edit
 - [Slides (pptx)](https://docs.google.com/presentation/d/1gVEoeMVD_aphZk6jIGZSy4tg4OsvOAdJ/edit?usp=sharing&ouid=114211675675236204132&rtpof=true&sd=true)
 
 
-### Additional material: 
-Here are two cheat-sheets that can be useful to have as a reference for common UNIX/Linux commands: 
+### Additional material:
+Here are two cheat-sheets that can be useful to have as a reference for common UNIX/Linux commands:
 
 - [FOSSwire.com Unix/Linux Command Reference](https://files.fosswire.com/2007/08/fwunixref.pdf)
 - [SUSO.org Unix/Linux Command Syntax and Reference](https://i.redd.it/6s2q64ticje51.png)
@@ -235,7 +235,7 @@ $ cp helloworld.txt helloworld2.txt
 ### Description of the lab:
 This section will show students how to search for files and in files.
 
-Workshop notes and quiz questions [here](/aws_2021_module_4).
+Workshop notes and quiz questions [here](/AWS_2021/module_4.html).
 
 -----------------------
 <a name="conclusion"></a>
@@ -244,7 +244,7 @@ Workshop notes and quiz questions [here](/aws_2021_module_4).
 ### Description of the lab:
 This section will show students how the basic concepts fit together and in the context of bioinformatics.
 
-Workshop notes and quiz questions [here](/aws_2021_module_5).
+Workshop notes and quiz questions [here](/AWS_2021/module_5.html).
 
 -----------------------
 <a name="ami"></a>
@@ -252,8 +252,8 @@ Workshop notes and quiz questions [here](/aws_2021_module_5).
 
 Starting the AWS AMI after the workshop is over:
 
-An updated AWS Machine Image (AMI) will be be prepred by Zhibin at the end of this CBW workshop: It will have the same software used in the workshop, but it will not contain any of the data. To get such an image started, you will need to set up your own AWS account with your own credit card, and then, the same as you did in this workshop, look for the CBW<new time stamp> AMI, and start that with your own project. 
-    
+An updated AWS Machine Image (AMI) will be be prepred by Zhibin at the end of this CBW workshop: It will have the same software used in the workshop, but it will not contain any of the data. To get such an image started, you will need to set up your own AWS account with your own credit card, and then, the same as you did in this workshop, look for the CBW<new time stamp> AMI, and start that with your own project.
+
 [Launching the AMI](https://bioinformatics-ca.github.io/bioinformatics_for_cancer_genomics_AMI_2015/)
-    
+
  Let us know on the slack channel or at course_info@bioinformatics.ca if you are experiencing any problems with this.
