Include link to AWS educate

--- a/AWS_v2_2021.md
+++ b/AWS_v2_2021.md
@@ -49,6 +49,11 @@ This section will show students how to login to AWS and create an instance.
 - [Slides (pdf)](https://drive.google.com/file/d/1Vf1uiJPpY8025pJjsWNFvgK-ImqkGmVE/view?usp=sharing)
 - [Slides (pptx)](https://drive.google.com/file/d/1Vf1uiJPpY8025pJjsWNFvgK-ImqkGmVE/view?usp=sharing)
 
+Once you have confirmed your account as per the email (subject line "You have been invited to join an AWS Educate Classroom"), you can log in here:
+
+- [www.awseducate.com](https://www.awseducate.com/signin/SiteLogin)
+
+
 -----------------------
 <a name="command_line_intro"></a>
 ## 2. Introduction to the command line
