--- a/aws_2021.md
+++ b/aws_2021.md
@@ -15,6 +15,9 @@ home: https://bioinformaticsdotca.github.io/CAN_2021
 *by Jose Hector Galvez, Zhibin Lu & Rob Syme*
 
 ---
+## Schedule
+
+Today's schedule can be found [here](https://bioinformaticsdotca.github.io/AWS_v2_2021_schedule)
 
 ## Contents:
 
