--- a/AWS_v2_2021.md
+++ b/AWS_v2_2021.md
@@ -17,6 +17,10 @@ endDate: 2021-06-03
 
 ---
 
+## Schedule:
+
+Today's schedule can be found [here](https://bioinformaticsdotca.github.io/AWS_v2_2021_schedule).
+
 ## Contents:
 
 1. [Logging into AWS ](#aws_login)
